# book-zero2prod

./: .dockerignore  .envrc.example  .gitattributes  .gitignore  Cargo.toml  Dockerfile  config.yaml  mprocs.yaml  spec.yaml
.sqlx/: query-446ad9a68a5f239fce81cad43acf3e4850b15a2f3cb1efed09c3b38edb31a033.json
config/: config.yaml  prod.yaml
migrations/: 20231223034443_create_subscriptions_table.sql
scripts/: dev.sh  init_db.sh  logs.sh  psql.sh
src/: config.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
